--- a/Dockerfile-rbenv_nvm
+++ b/Dockerfile-rbenv_nvm
@@ -54,8 +54,10 @@ SHELL ["/bin/bash", "-l", "-c"]
 
 # Make sure you define DOCKER_UID and DOCKER_GID to match the user IDs used on your system,
 # so that your volume mappings work with your user
-ARG USER_NAME=user
-ARG APP_DIR=app
+ARG build_user_name=user
+ENV USER_NAME=$build_user_name
+ARG build_app_dir=app
+ENV APP_DIR=$build_app_dir
 ARG DOCKER_UID=1000
 ARG DOCKER_GID=1000
 RUN groupadd -g $DOCKER_GID $USER_NAME
@@ -63,9 +65,11 @@ RUN useradd $USER_NAME -u $DOCKER_UID -g $DOCKER_GID --create-home --shell /bin/
 
 USER ${USER_NAME}:${USER_NAME}
 
-ARG NODE_VERSION=20.16.0
+ARG build_node_version=20.16.0
+ENV NODE_VERSION=$build_node_version
 ARG NVM_DIR=/home/${USER_NAME}/.nvm
-ARG NVM_INSTALL_VERSION=v0.40.0
+ARG build_nvm_install_version=v0.40.0
+ENV NVM_INSTALL_VERSION=$build_nvm_install_version
 
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/$NVM_INSTALL_VERSION/install.sh | bash
 
@@ -80,7 +84,8 @@ RUN echo 'PATH=$HOME/.nvm/versions/node/v${NODE_VERSION}/bin/:$PATH' \
   >> /home/${USER_NAME}/.profile
 
 
-ARG RUBY_VERSION=3.3.4
+ARG build_ruby_version=3.3.4
+ENV RUBY_VERSION=$build_ruby_version
 
 RUN git clone https://github.com/rbenv/rbenv.git /home/${USER_NAME}/.rbenv
 RUN git clone https://github.com/rbenv/ruby-build.git /home/${USER_NAME}/.rbenv/plugins/ruby-build
