--- a/Dockerfile-rbenv_nvm
+++ b/Dockerfile-rbenv_nvm
@@ -24,6 +24,7 @@ RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get install -y --no
   postgresql-client \
   redis \
   ruby-dev \
+  sudo \
   tzdata \
   vim-tiny \
   wget \
@@ -41,9 +42,9 @@ RUN echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && \
   locale-gen
 
 # Set default locale for the environment
-ENV LC_ALL C.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
+ENV LC_ALL=C.UTF-8
+ENV LANG=en_US.UTF-8
+ENV LANGUAGE=en_US.UTF-8
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -52,14 +53,19 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # sourced when the shell starts
 SHELL ["/bin/bash", "-l", "-c"]
 
-# Make sure you define DOCKER_UID and DOCKER_GID to match the user IDs used on your system,
+# Make sure you define build_docker_uid and build_docker_gid to match the user IDs used on your system,
 # so that your volume mappings work with your user
 ARG build_user_name=user
 ENV USER_NAME=$build_user_name
-ARG DOCKER_UID=1000
-ARG DOCKER_GID=1000
-RUN groupadd -g $DOCKER_GID $USER_NAME
-RUN useradd $USER_NAME -u $DOCKER_UID -g $DOCKER_GID --create-home --shell /bin/bash
+ARG build_docker_uid
+RUN test -n "$build_docker_uid" || (echo "build_docker_uid  not set" && false)
+ARG build_docker_gid=1000
+RUN test -n "$build_docker_gid" || (echo "build_docker_gid  not set" && false)
+RUN groupadd -g $build_docker_gid $USER_NAME
+RUN useradd $USER_NAME -u $build_docker_uid -g $build_docker_gid --create-home --shell /bin/bash
+RUN mkdir -p /etc/sudoers.d \
+  && echo "$USER_NAME ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$USER_NAME \
+  && chmod 0440 /etc/sudoers.d/$USER_NAME
 
 USER ${USER_NAME}:${USER_NAME}
 WORKDIR /home/$USER_NAME
@@ -100,4 +106,9 @@ RUN rbenv install ${RUBY_VERSION} \
 
 RUN echo 'gem: --no-document' >> /home/${USER_NAME}/.gemrc
 
-CMD ["sleep", "infinity"]
+COPY --chmod=775 check_ownership.sh /usr/local/bin/check_ownership
+
+ENTRYPOINT ["check_ownership"]
+
+# run with `sleep infinity` if you want to keep a running container to exec to
+CMD ["bash", "-l"]
